# api-cdshub

./: .env.example  Cargo.toml
migrations/: 001_create_sessions.sql  002_split_companies.sql  003_add_revenda_roles.sql
prisma/: schema.prisma  seed.ts
src/: app.module.ts  config.rs  db.rs  errors.rs  main.rs  openapi.rs  openapi.yaml
src/auth/: auth.controller.ts  auth.service.ts  jwt.rs  middleware.rs  mod.rs  model.rs  revenda_access.rs  routes.rs  service.rs  sessions.rs
src/auth/decorators/: service-scope.decorator.ts
src/auth/guards/: scoped-api-key.guard.ts
src/auth/sessions/: sessions.controller.ts  sessions.service.ts
src/casl/: policies.guard.ts
src/clients/: model.rs  routes.rs  service.rs
src/clients/dto/: create-client.dto.ts
src/common/: constants.rs  mod.rs  pagination.rs  password.rs  types.rs  validation.rs
src/companies/: address.rs  companies.service.ts  contact.rs  mod.rs  model.rs  routes.rs  service.rs  tax_info.rs
src/companies/dto/: create-company.dto.ts
src/entities/: access_rules.rs  blog_posts.rs  clients.rs  companies.rs  company_systems.rs  contact_requests.rs  contracts.rs  erp_instances.rs  logs.rs  mod.rs  prelude.rs  revenda_systems.rs  revendas.rs  sea_orm_active_enums.rs  sessions.rs  suggestions.rs  ticket_actions.rs  ticket_assignments.rs  tickets.rs  user_companies.rs  users.rs
src/prisma/: prisma.service.ts
src/proxy/: mod.rs
src/rbac/: model.rs  service.rs
src/revendas/: model.rs  revendas.service.ts  routes.rs  service.rs
src/revendas/dto/: create-revenda.dto.ts
src/revendas/queues/: provisioning.processor.ts
src/suggestions/: model.rs  routes.rs  service.rs  suggestions.controller.ts  suggestions.service.ts
src/systems/: model.rs  routes.rs  service.rs  systems.controller.ts  systems.service.ts
src/tickets/: model.rs  routes.rs  service.rs
src/users/: model.rs  routes.rs  service.rs
src/users/dto/: create-user.dto.ts
tests/auth/: middleware.rs
