[package]
name = "api-cdshub"
version = "0.1.0"
edition = "2021"

[dependencies]

axum = "0.8"
axum-extra = { version = "0.12", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# ORM
sea-orm = { version = "1.1", features = ["runtime-tokio-native-tls", "macros", "with-chrono", "with-uuid", "serde_json", "postgres-array", "with-json"] }
sea-orm-migration = { version = "1.1", features = ["runtime-tokio-native-tls"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
bcrypt = "0.16"
rand = "0.8"
totp-rs = { version = "5", features = ["gen_secret", "otpauth"] }
qrcode = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# Types
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
cargo-watch = "8.5"
